feat (requirements): Add jquery + canvas

--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -26,7 +26,8 @@
     }
 </div>
 <hr/>
-<h4>Core Developers:</h4>
+@*<h4>Core Developers:</h4>*@
+<canvas id="canvasid"></canvas>
 <div class="FlexRow" style="flex-wrap: wrap; justify-content: space-around; flex-wrap: wrap; align-content: center; margin: 0 200px">
     <div class="FlexRow employee-wrap">
         <div class="FlexRow employee">
@@ -37,7 +38,7 @@
                 Cross-platform Developer at Israel Defense Forces
                 <div class="FlexRow" style="justify-content: flex-end">
                     <a href="https://www.linkedin.com/in/bar-miliavsky-b3696b55">
-                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none" ">
+                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none">
                     </a>
                 </div>
             </div>
@@ -52,7 +53,7 @@
                 Development Team Leader at Israel Defense Forces
                 <div class="FlexRow" style="justify-content: flex-end">
                     <a href="https://www.linkedin.com/in/yakir-kadkoda-813928b5">
-                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none" ">
+                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none" >
                     </a>
                 </div>
             </div>
@@ -67,7 +68,7 @@
                 Programmer and on-the-job trainer at Israel Defense Forces
                 <div class="FlexRow" style="justify-content: flex-end">
                     <a href="https://www.linkedin.com/in/nadav-kaner-671817109">
-                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none" ">
+                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none">
                     </a>
                 </div>
             </div>
@@ -82,23 +83,31 @@
                 Full-Stack Developer at Israel Defense Force
                 <div class="FlexRow" style="justify-content: flex-end">
                     <a href="https://www.linkedin.com/in/mor-tal-8970b010a">
-                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none" ">
+                        <img alt="LinkedIn" border="0" height="14" src="https://ci3.googleusercontent.com/proxy/_vGiq1id9xAsRUtZPamNuOBhctilGDplJvKTQSvFRtC8FfW7zNaU9xWAOsjQzUd-oL4jIkjc1L3GEMYk5FV9f1yJf7JQr1xzrWt46srndpONLL4QJPWwxPG3zeDM4DGewwLLoSNkt7PJ3ET8KQZURZ1fCY3zTZm13Vr4N3Dr=s0-d-e1-ft#https://static.licdn.com/scds/common/u/images/email/phoenix/logos/logo_phoenix_footer_gray_197x48_v1.png" width="58" style="outline: none; color: #ffffff; display: block; text-decoration: none">
                     </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    <script>
-        function drawOnCanvas(id) {
-            var c = document.getElementById(id);
-            var ctx = c.getContext("2d");
-            ctx.fillStyle = "#000000";
-            ctx.fillRect(0, 0, 220, 10);
+
+<div>
+
+</div>
+@Scripts.Render("~/bundles/jquery")
+<script>
+        function Canvas() {
+            var canvas = document.getElementById("canvasid");
+            var ctx = canvas.getContext("2d");
+            ctx.font = "30px Arial";
+            ctx.strokeText("Core Developers:", 10, 30);
         }
 
-        drawOnCanvas("myCanvas1");
-        drawOnCanvas("myCanvas2");
+        Canvas("canvasid");
+
+        $(document).ready(function () {
+            $("#canvasid").click(function() { alert("bes in the world!") });
+        });
     </script>
 
     <style>
