--- a/FinalProject/Content/Site.css
+++ b/FinalProject/Content/Site.css
@@ -44,3 +44,9 @@ input[type="checkbox"].input-validation-error { border: 0 none; }
     flex-direction: row;
     align-content: center;
 }
+
+.text-area-size {
+    width: 50%;
+    height: 160px;
+    max-width: 800px!important;
+}
