fix: bar dyslexia

--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -106,7 +106,7 @@
         Canvas("canvasid");
 
         $(document).ready(function () {
-            $("#canvasid").click(function() { alert("bes in the world!") });
+            $("#canvasid").click(function() { alert("best in the world!") });
         });
     </script>
 
