feat (dev-tools): add group by company

--- a/FinalProject/Views/DevelopmentTool/Index.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Index.cshtml
@@ -14,7 +14,8 @@
 <div style="margin: 15px 0">
     <strong>Filters</strong>
 
-    <br/>@Html.ActionLink("Clear Filters", "Index")
+    <br />@Html.ActionLink("Clear Filters", "Index")
+    <br />@Html.ActionLink("group by company", "GroupByCompany")
 </div>
 
 <div>
