feat(ajax-fransis): added ajax call to reload comments in development tools

--- a/FinalProject/Views/DevelopmentTool/Details.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Microsoft.AspNet.Identity
-@using Microsoft.AspNet.Identity.EntityFramework
 @model FinalProject.Models.DevelopmentTool
 
 @{
@@ -7,13 +6,13 @@
 }
 
 <h3>Development tool Details For: @Html.DisplayFor(model => model.Name)</h3>
-<hr/>
+<hr />
 <div style="position: relative;">
     <div style="position: absolute; height: 0; right: 0;">
-        <img src="@Html.DisplayFor(model => model.ImagePath)" style="position: absolute; right: 50px; height: 100px;"/>
+        <img src="@Html.DisplayFor(model => model.ImagePath)" style="position: absolute; right: 50px; height: 100px;" />
     </div>
     <dl class="dl-horizontal">
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -21,7 +20,7 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-        
+
         <dt>
             @Html.DisplayNameFor(model => model.Company)
         </dt>
@@ -45,7 +44,7 @@
         <dd>
             @Html.DisplayFor(model => model.NumberOfUsers)
         </dd>
-        
+
         <dt>
             Source Code License
         </dt>
@@ -87,10 +86,12 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {id = Model.Id}) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
 <hr />
+
 <h4>comments:</h4>
 
 @if (Model.Comments == null || !Model.Comments.Any())
@@ -115,36 +116,39 @@ else
             </th>
         </tr>
 
-        @foreach (var item in Model.Comments.OrderBy(x => x.Date))
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.User.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Text)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    @if (User.IsInRole("Admin") || User.Identity.GetUserId() == item.User.Id)
-                    {
-                        @Html.ActionLink("Delete", "DeleteComment", new {id = item.Id})
-                    }
-                    else
-                    {
-                        <div style="color: gray">No Actions</div>
-                    }
-                </td>
-            </tr>
-        }
+        <tbody id="comments">
+
+            @foreach (var item in Model.Comments.OrderBy(x => x.Date))
+                {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.User.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Text)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Date)
+                    </td>
+                    <td>
+                        @if (User.IsInRole("Admin") || User.Identity.GetUserId() == item.User.Id)
+                        {
+                            @Html.ActionLink("Delete", "DeleteComment", new { id = item.Id })
+                        }
+                        else
+                        {
+                            <div style="color: gray">No Actions</div>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
 
     </table>
 }
 @if (User.Identity.IsAuthenticated)
 {
-    @Html.ActionLink("Add comment", "AddComment", new {id = Model.Id})
+    @Html.ActionLink("Add comment", "AddComment", new { id = Model.Id })
 }
 else
 {
@@ -154,9 +158,47 @@ else
         @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
         to leave a comment.
     </div>
-    
+
 }
 
+@Scripts.Render("~/bundles/jquery")
+<script type="text/javascript">
+    function loadComments() {
+        $.ajax({
+            url: '@Url.Action("CommentDetails", "DevelopmentTool", new { id = Model.Id })',
+            type: 'GET',
+            dataType: 'json',
+            // we set cache: false because GET requests are often cached by browsers
+            // IE is particularly aggressive in that respect
+            cache: false,
+            data: {},
+            success: function(result) {
+                $('#comments').empty();
+                result.forEach(function(comment) {
+                    var deleteLink = "<div style=\"color: gray\">No Actions</div>";
+                    if (comment.canDelete) {
+                        deleteLink = "<a href=\"/DevelopmentTool/DeleteComment/" + comment.Id + "\">Delete</a>";
+                    }
+                    $('#comments')
+                        .append("<tr><td>" +
+                            comment.userName +
+                            "</td><td>" +
+                            comment.Text +
+                            "</td><td>" +
+                            comment.Date +
+                            "</td>" +
+                            "<td>" +
+                            deleteLink);
+                });
+            }
+        });
+    }
 
+    $(document).ready(function () {
+        setInterval(function () {
+            loadComments();
+        }, 5000);
+    });
+</script>
 
 
