feat (company): add validation and fields
feat (development tool): add validation and fields

--- a/FinalProject/Views/Company/Create.cshtml
+++ b/FinalProject/Views/Company/Create.cshtml
@@ -71,7 +71,13 @@
                     @Html.ValidationMessageFor(model => model.TotalRevenue)
                 </div>
             </div>
-
+            <div class="form-group">
+                @Html.LabelFor(model => model.NumberOfEmployees, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.NumberOfEmployees)
+                    @Html.ValidationMessageFor(model => model.NumberOfEmployees)
+                </div>
+            </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
