--- a/FinalProject/Views/Company/Edit.cshtml
+++ b/FinalProject/Views/Company/Edit.cshtml
@@ -70,6 +70,15 @@
             </div>
         </div>
         
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.NumberOfEmployees, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NumberOfEmployees)
+                @Html.ValidationMessageFor(model => model.NumberOfEmployees)
+            </div>
+        </div>
+        
         <div class="form-group">
             @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
