--- a/FinalProject/Views/DevelopmentTool/Create.cshtml
+++ b/FinalProject/Views/DevelopmentTool/Create.cshtml
@@ -1,10 +1,13 @@
-﻿@model FinalProject.Models.DevelopmentTool
+﻿@using FinalProject.Models
+@model FinalProject.Models.DevelopmentTool
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create development tool";
 }
 
-<h2>Create</h2>
+<h3>Create Development tool</h3>
+
+
 
 @using (Html.BeginForm())
 {
@@ -14,49 +17,104 @@
         <h4>DevelopmentTool</h4>
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Price, new {@class = "control-label col-md-2"})
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Price)
-                    @Html.ValidationMessageFor(model => model.Price)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.LastUpdate, new {@class = "control-label col-md-2"})
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LastUpdate)
-                    @Html.ValidationMessageFor(model => model.LastUpdate)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, new {@class = "control-label col-md-2"})
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name)
-                    @Html.ValidationMessageFor(model => model.Name)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Description)
-                    @Html.ValidationMessageFor(model => model.Description)
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
+            @Html.LabelFor(model => model.Price, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Price)
+                @Html.ValidationMessageFor(model => model.Price)
             </div>
         </div>
-        
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.LastUpdate, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LastUpdate, new { @class = "form-control datepicker", placeholder = "Enter Last update" })
+                value template: (@DateTime.Now)
+                @Html.ValidationMessageFor(model => model.LastUpdate)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Company, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.CompanyId, new SelectList(ViewBag.Companies, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.CompanyId)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Description, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.SiteUrl, "Site url", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SiteUrl, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.SiteUrl)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ImagePath, "Image path", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ImagePath, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.ImagePath)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Rate, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Rate, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.Rate)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NumberOfRaters, "Number of raters", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NumberOfRaters, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.NumberOfRaters)
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NumberOfUsers, "Number of users", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NumberOfUsers, new { @class = "text-area-size" })
+                @Html.ValidationMessageFor(model => model.NumberOfUsers)
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.SourceCodeLicense, "Source code license", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.SourceCodeLicense, new { @class = "text-area-size" })
+                values: ( @string.Join(", ", Enum.GetNames(typeof(SourceCodeLicense))) )
+                @Html.ValidationMessageFor(model => model.SourceCodeLicense)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
     </div>
 }
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
